<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.mia</groupId>
    <artifactId>demo</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>demo</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.8.2</junit.version>
        <sys.java.home>${env.JAVA_HOME}</sys.java.home>
    </properties>

    <dependencies>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.30</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>18.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>18.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.1.1</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>18</source>
                    <target>18</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                    <configuration>
                        <archive>
                          <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>libs/</classpathPrefix>
                            <mainClass>com.mia.apa.Main</mainClass>
                              <options>
                                  <option>--add-exports</option>
                                  <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                              </options>
                          </manifest>
                         </archive>
                    </configuration>
            </plugin>
            <!-- Wraps the project jar into an .exe -->
<!--            <plugin>-->
<!--                <groupId>com.akathist.maven.plugins.launch4j</groupId>-->
<!--                <artifactId>launch4j-maven-plugin</artifactId>-->
<!--                <version>2.1.2</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>jar-to-exe</id>-->
<!--                        <phase>package</phase>-->
<!--                        <goals>-->
<!--                            <goal>launch4j</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            <headerType>gui</headerType>-->
<!--                            <stayAlive>true</stayAlive>-->
<!--                            <outfile>${project.build.directory}/${project.build.finalName}.exe</outfile>-->
<!--                            <jar>${project.build.directory}/${project.build.finalName}.jar</jar>-->

<!--                            <classPath>-->
<!--                                &lt;!&ndash; The main class to invoke on executing the .exe &ndash;&gt;-->
<!--                                <mainClass>com.mia.apa.Main</mainClass>-->
<!--                            </classPath>-->
<!--                            <jre>-->
<!--                                <minVersion>1.0.0</minVersion>-->
<!--                                <jdkPreference>preferJre</jdkPreference>-->

<!--                                &lt;!&ndash; Relative path to the JRE in the final zip bundle, to launch the exe/jar&ndash;&gt;-->
<!--                                <path>./lib/jre</path>-->

<!--                                &lt;!&ndash; Runtime arguments &ndash;&gt;-->
<!--                                <opts>-->
<!--                                    &lt;!&ndash; Run time arguments can be passed using <opt> as below &ndash;&gt;-->
<!--                                    &lt;!&ndash;<opt>-Dparam=value</opt>&ndash;&gt;-->
<!--                                </opts>-->

<!--                            </jre>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->

<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-assembly-plugin</artifactId>-->
<!--                <version>3.3.0</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        &lt;!&ndash; Bundle the .exe and jre into a final release zip &ndash;&gt;-->
<!--                        <phase>package</phase>-->
<!--                        <goals>-->
<!--                            <goal>single</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            <appendAssemblyId>false</appendAssemblyId>-->
<!--                            <descriptors>-->
<!--                                &lt;!&ndash; Defines the files that need to be bundled in the final zip&ndash;&gt;-->
<!--                                <descriptor>${project.basedir}/src/main/resources/assembly.mg</descriptor>-->
<!--                            </descriptors>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
<!--            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                         Default configuration for running with: mvn clean javafx:run 
                        <id>default-cli</id>
                        <configuration>
                        <archive>
                          <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>libs/</classpathPrefix>
                            <mainClass>com.mia.apa.Main</mainClass>
                            <launcher>app</launcher>
                            <jlinkZipName>app</jlinkZipName>
                            <jlinkImageName>app</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                          </manifest>
                         </archive>
                        </configuration>
                    </execution>
                </executions>
            </plugin>-->
        </plugins>
    </build>
</project>